[package]
name = "Haski"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.19"
wyhash = "0.5.0"
sled = "0.34.7"
ta = "0.4.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
yahoo_finance_api = "1.2.2"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4.2"
clap = { version = "3.1.6", features = ["derive"] }
colored = "2"