[package]
name = "Haski"
description = "Experimental hash-powered stock forecaster 👽"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.19"
wyhash = "0.5.0"
sled = "0.34.7"
plotters = "0.3.1"
yahoo_finance_api = "1.2.2"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4.2"
clap = { version = "3.1.6", features = ["derive"] }
colored = "2"